istio/gateway-tls-passthrough.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  namespace: istio-ingress
  name: gateway-tls-passthrough
spec:
  selector:
    app: istio-ingress
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: PASSTHROUGH
    hosts:
    - "artifactory-jcr.lan.asio"
